# insaitrag

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  entry.py  faq.json  info.txt  main.py  output.csv  pyproject.toml  pytest.ini  readme.md  reports.md  requirements.txt
src/: agent.py  mock.py  models.py  setup_vector.py  templates.py  utils.py
src/libs/chroma_db/: chroma_client.py
src/llm_models/: base.py  gemini_llm.py  openai_llm.py  source.py
tests/: conftest.py  test_entry.py  test_main.py  test_model.py  test_setup_vector.py
tests/mocks/: mock_data.py
